# Flags-To-SH

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: core.c  core.h  gui.cpp  main.c
